# Steam-Sales-Analysis

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  data_download.py  dev-requirements.txt  environment.yml  get_version.py  id_collection.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: autoformat.yml  python-publish.yml  test-package-platforms.yml
dag/: Dockerfile  requirements.txt
dag/flows/: ss_etl.py
data/download/: app_list.csv  steam_app_data.csv
docs/: steamstore-etl.drawio  steamstoreCLI.md
notebooks/: data_exploration.ipynb  steam_data_cleaning.ipynb  steamspy_data_cleaning.ipynb
steam_sales/: _version.py  app.py
steam_sales/notebooks/: data_cleaning.ipynb  data_exploration.ipynb  steam_data_cleaning.ipynb  steamspy_data_cleaning.ipynb
steam_sales/sql/: appid_dup.sql  date.sql  get_new_steam_data.sql  get_new_steamspy_data.sql  remove_duplicates_steam.sql  steam_appid_dup.sql  steamspy_appid_dup.sql  temp.sql
steam_sales/src/: cleaner.py  cleaning_helper.py  collect_metadata.py  collect_steam_data.py  collect_steamspy_data.py  crud.py  data_cleaning.py  db.py  extra_col.py  fetcher.py  model.py  scraping.py  settings.py  validation.py
steam_sales/src/deprecated/: data_download.py  id_collection.py
steam_sales/steam_etl/: __init__.py  app.py  cleaner.py  crud.py  db.py  fetcher.py  model.py  utils.py  validation.py
