
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = steam_sales/_version.py
versionfile_build = steam_sales/_version.py
tag_prefix = ''

[build-system]
requires = ["setuptools>=64", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"